Added few more functionalities :sparkles:

--- a/player/index.html
+++ b/player/index.html
@@ -12,7 +12,8 @@
 
 <body>
   <div class="video-container">
-    <video src="bbb.mp4"></video>
+    <video preload="metadata" src="bbb.mp4#t=0.5"></video>
+
     <div class="controls-container">
       <div class="progress-controls">
         <div class="progress-bar">
